// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperateSteps.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--primary t-size-s"
  >
    上一步
  </button>
  <button
    class="t-button t-button--line t-size-s"
  >
    下一步
  </button>
  <br />
  <br />
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor t-steps--positive"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤1
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            1
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤2
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            2
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤3
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤4
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps t-steps--vertical t-steps--default-anchor t-steps--positive"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤1
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            1
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤3
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            2
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤4
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤5
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReverseSteps.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-steps t-steps--vertical t-steps--default-anchor t-steps--reverse"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            2
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`extra.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-steps t-steps--vertical t-steps--default-anchor t-steps--positive"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤1
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            1
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤2
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
          <div
            class="t-steps-item-extra"
          >
            <button
              class="t-button t-button--theme-default t-button--variant-text t-size-s"
              style="position: relative;"
            >
              <span
                class="t-button__text"
              >
                pre
              </span>
            </button>
            <div
              style="display: inline; margin-left: 4px;"
            >
              <button
                class="t-button t-button--theme-primary t-button--variant-base t-size-s"
                style="position: relative;"
              >
                <span
                  class="t-button__text"
                >
                  Next
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            2
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤3
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            步骤4
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor t-steps--positive"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <svg
            class="t-icon t-icon-login"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256.00000704 896L256.00000704 704 320.00000704 704 319.99985408 832 831.9998528 832 832.0000064 192 319.99985408 192 320.00000704 320 256.00000704 320 256.00000704 128 864.0000064 128C881.67312 128 896.0000064 142.32688832 896.0000064 160L896 864 896 864C896 879.7094336 884.6799872 892.7749376 869.7520384 895.4844352L864.0000064 896 864.0000064 896 256.00000704 896ZM491.8570528 286.012576L695.4763584 489.06737344 695.6916544 489.27622784 695.9339264 489.51595584C707.4359616 501.0179936 708.2989056 519.13373888 698.5149952 531.62807424 696.9457344 533.74769728 695.118752 535.69277056 693.0774912 537.38884864L492.43054464 738.5609152 447.46245632 693.5928256 595.94692992 544.76891584 128.63985408 544.76454848 128.63985408 480.76454848 597.09892992 480.76891584 446.88896448 330.98066432 491.8570528 286.012576Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            登录
          </div>
          <div
            class="t-steps-item-description"
          >
            已完成状态
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <svg
            class="t-icon t-icon-cart"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M832 128C867.3462208 128 896 156.653776 896 192L896 832C896 867.3462208 867.3462208 896 832 896L192 896C156.653776 896 128 867.3462208 128 832L128 192C128 156.653776 156.653776 128 192 128L832 128ZM832 192L767.936 192 767.6867008 204.77698176C761.2371008 335.9932352 655.9932352 441.23709952 524.77698176 447.68670016L512 448C370.615104 448 256 333.384896 256 192L255.936 192 192 192 192 832 832 832 832 192ZM703.936 192L319.936 192 320.32593216 203.28145856C325.94941568 300.33624576 403.66375424 378.05058432 500.71854144 383.67406784L512 384C618.038672 384 704 298.038672 704 192L703.936 192Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            购物
          </div>
          <div
            class="t-steps-item-description"
          >
            进行中状态
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <svg
            class="t-icon t-icon-wallet"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128 240C128 213.49033216 156.653776 192 192 192L576 192C611.346224 192 640 213.49033216 640 240L640 320 832 320C867.3462208 320 896 348.653776 896 384L896 832C896 867.3462208 867.3462208 896 832 896L192 896C156.653776 896 128 867.3462208 128 832L128 240ZM832 384L192 384 192 832 832 832 832 384ZM768 448L768 640 704 640 704 448 768 448ZM576 256L192 256 192 320 192 320 576 320 576 256Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            支付
          </div>
          <div
            class="t-steps-item-description"
          >
            未开始
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <svg
            class="t-icon t-icon-check-circle"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM512 160C317.59576832 160 160 317.59576832 160 512 160 706.4042304 317.59576832 864 512 864 706.4042304 864 864 706.4042304 864 512 864 317.59576832 706.4042304 160 512 160ZM690.8655168 353.58818368L736.120352 398.8430176 509.84617984 625.1171872 464.59134592 670.3720192 419.336512 625.1171872 283.57201024 489.35268544 328.82684416 444.09785152 464.576 579.84 690.8655168 353.58818368Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            完成
          </div>
          <div
            class="t-steps-item-description"
          >
            未开始
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`no-sequence.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-steps t-steps--horizontal t-steps--positive t-steps--dot-anchor"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        />
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        />
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        />
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        />
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`sequence.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor t-steps--positive"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            1
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            2
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor t-steps--positive"
    style="margin-top: 16px;"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            2
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor t-steps--positive"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            1
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            2
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-steps t-steps--horizontal t-steps--default-anchor t-steps--positive"
    style="margin-top: 16px;"
  >
    <div
      class="t-steps-item t-steps-item--finish"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon t-steps-item-finish"
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-check"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            已完成的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--process"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            1
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            进行中的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--error"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            <svg
              class="t-icon t-icon-close"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
              />
            </svg>
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            错误的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            优先展示\`t-step\`中设置的 status
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps-item t-steps-item--wait"
    >
      <div
        class="t-steps-item__inner"
      >
        <div
          class="t-steps-item-icon "
        >
          <span
            class="t-steps-item-icon__number"
          >
            3
          </span>
        </div>
        <div
          class="t-steps-item-content"
        >
          <div
            class="t-steps-item-title"
          >
            未进行的步骤
          </div>
          <div
            class="t-steps-item-description"
          >
            这里是提示文字
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical-no-sequence.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="t-steps t-steps--vertical t-steps--positive t-steps--dot-anchor"
    >
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon t-steps-item-finish"
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps t-steps--vertical t-steps--reverse t-steps--dot-anchor"
    >
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon t-steps-item-finish"
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          />
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical-sequence.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="t-steps t-steps--vertical t-steps--default-anchor t-steps--positive"
    >
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon t-steps-item-finish"
          >
            <span
              class="t-steps-item-icon__number"
            >
              <svg
                class="t-icon t-icon-check"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          >
            <span
              class="t-steps-item-icon__number"
            >
              1
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          >
            <span
              class="t-steps-item-icon__number"
            >
              2
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          >
            <span
              class="t-steps-item-icon__number"
            >
              3
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-steps t-steps--vertical t-steps--default-anchor t-steps--reverse"
    >
      <div
        class="t-steps-item t-steps-item--finish"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon t-steps-item-finish"
          >
            <span
              class="t-steps-item-icon__number"
            >
              <svg
                class="t-icon t-icon-check"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M402.9169184 763.46881088L407.35241728 759.72593536 407.35241728 759.72593536C409.12022784 757.9518048 410.63754048 756.02214208 411.90433344 753.98102464L873.9229504 292.3899263999999 828.6681152 247.13509119999992 384.0738432 691.1020115199999 161.04067712 467.62941951999994 115.7858432 512.8842540799999 362.1198656 759.70367488C373.1973664 770.84261696 390.437104 772.0960345599999 402.9169184 763.46881088Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--process"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          >
            <span
              class="t-steps-item-icon__number"
            >
              1
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              未进行的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          >
            <span
              class="t-steps-item-icon__number"
            >
              2
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              进行中的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-steps-item t-steps-item--wait"
      >
        <div
          class="t-steps-item__inner"
        >
          <div
            class="t-steps-item-icon "
          >
            <span
              class="t-steps-item-icon__number"
            >
              3
            </span>
          </div>
          <div
            class="t-steps-item-content"
          >
            <div
              class="t-steps-item-title"
            >
              已完成的步骤
            </div>
            <div
              class="t-steps-item-description"
            >
              这里是提示文字
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
